--- a/contact.html
+++ b/contact.html
@@ -4,3 +4,5 @@
     <li>Email: villegaschristopher03@gmail.com</li>
     <li><a href="https://www.linkedin.com/in/christophervillegas03/">LinkedIn: Christopher Villegas</a></li>
 </ul>
+
+<a href="index.html"> <img height="50" src="./assets/home.png"> </a>
