--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <h1>My Contact No.</h1>
 <ul>
-    <li>Mobile: (+63) 9277880242</li>
+    <li>Mobile: (+63) 9277880***</li>
     <li>Email: villegaschristopher03@gmail.com</li>
     <li><a href="https://www.linkedin.com/in/christophervillegas03/">LinkedIn: Christopher Villegas</a></li>
 </ul>
